bison2/eta_parse.output
Terminals which are not used

   LNOT
   NEG
   MOD


State 0 conflicts: 1 shift/reduce
State 7 conflicts: 1 shift/reduce
State 20 conflicts: 7 shift/reduce
State 27 conflicts: 6 shift/reduce
State 44 conflicts: 7 shift/reduce
State 50 conflicts: 7 shift/reduce
State 51 conflicts: 7 shift/reduce
State 52 conflicts: 7 shift/reduce
State 53 conflicts: 7 shift/reduce
State 54 conflicts: 7 shift/reduce
State 55 conflicts: 7 shift/reduce
State 56 conflicts: 7 shift/reduce
State 57 conflicts: 7 shift/reduce
State 58 conflicts: 7 shift/reduce
State 59 conflicts: 7 shift/reduce
State 60 conflicts: 7 shift/reduce
State 61 conflicts: 7 shift/reduce
State 62 conflicts: 7 shift/reduce
State 63 conflicts: 7 shift/reduce
State 64 conflicts: 7 shift/reduce
State 65 conflicts: 7 shift/reduce
State 66 conflicts: 7 shift/reduce
State 67 conflicts: 7 shift/reduce
State 68 conflicts: 7 shift/reduce
State 69 conflicts: 7 shift/reduce


Grammar

    0 $accept: program $end

    1 program: el code_lit el

    2 expr: TO_EXP expr
    3     | expr ASSIGN expr
    4     | expr CALL expr
    5     | expr TUPLE expr
    6     | expr TAG expr
    7     | expr AS expr
    8     | expr AS
    9     | expr ARR expr
   10     | expr LOR expr
   11     | expr LAND expr
   12     | expr UNEQ expr
   13     | expr EQ expr
   14     | expr GTE expr
   15     | expr LTE expr
   16     | expr GT expr
   17     | expr LT expr
   18     | expr CAT expr
   19     | expr SUB expr
   20     | expr ADD expr
   21     | expr DIV expr
   22     | expr MUL expr
   23     | expr POW expr
   24     | expr expr
   25     | expr subscript
   26     | LPAR expr RPAR
   27     | LPAR RPAR
   28     | literal
   29     | NAME

   30 literal: INT_LIT
   31        | FLOAT_LIT
   32        | STRING_LIT
   33        | code_lit

   34 code_lit: code_block

   35 code_block: LBRA lines RBRA
   36           | LBRA lines al RBRA

   37 lines: /* empty */
   38      | expr
   39      | lines al expr

   40 subscript: LSBR expr RSBR

   41 al: NL
   42   | al NL

   43 el: /* empty */
   44   | NL
   45   | el NL


Terminals, with rules where they appear

$end (0) 0
error (256)
NL (258) 41 42 44 45
TO_EXP (259) 2
ASSIGN (260) 3
CALL (261) 4
TUPLE (262) 5
TAG (263) 6
AS (264) 7 8
ARR (265) 9
LOR (266) 10
LAND (267) 11
LNOT (268)
CAT (269) 18
UNEQ (270) 12
EQ (271) 13
GTE (272) 14
LTE (273) 15
GT (274) 16
LT (275) 17
SUB (276) 19
ADD (277) 20
NEG (278)
MOD (279)
DIV (280) 21
MUL (281) 22
POW (282) 23
F_CALL (283)
SUBSCR (284)
INT_LIT (285) 30
FLOAT_LIT (286) 31
NAME (287) 29
STRING_LIT (288) 32
LPAR (289) 26 27
RPAR (290) 26 27
LBRA (291) 35 36
RBRA (292) 35 36
LSBR (293) 40
RSBR (294) 40


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
program (41)
    on left: 1, on right: 0
expr (42)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    23 24 25 26 27 28 29, on right: 2 3 4 5 6 7 8 9 10 11 12 13 14
    15 16 17 18 19 20 21 22 23 24 25 26 38 39 40
literal (43)
    on left: 30 31 32 33, on right: 28
code_lit (44)
    on left: 34, on right: 1 33
code_block (45)
    on left: 35 36, on right: 34
lines (46)
    on left: 37 38 39, on right: 35 36 39
subscript (47)
    on left: 40, on right: 25
al (48)
    on left: 41 42, on right: 36 39 42
el (49)
    on left: 43 44 45, on right: 1 45


state 0

    0 $accept: . program $end

    NL  shift, and go to state 1

    NL        [reduce using rule 43 (el)]
    $default  reduce using rule 43 (el)

    program  go to state 2
    el       go to state 3


state 1

   44 el: NL .

    $default  reduce using rule 44 (el)


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: el . code_lit el
   45 el: el . NL

    NL    shift, and go to state 5
    LBRA  shift, and go to state 6

    code_lit    go to state 7
    code_block  go to state 8


state 4

    0 $accept: program $end .

    $default  accept


state 5

   45 el: el NL .

    $default  reduce using rule 45 (el)


state 6

   35 code_block: LBRA . lines RBRA
   36           | LBRA . lines al RBRA

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    $default  reduce using rule 37 (lines)

    expr        go to state 15
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    lines       go to state 18


state 7

    1 program: el code_lit . el

    NL  shift, and go to state 1

    NL        [reduce using rule 43 (el)]
    $default  reduce using rule 43 (el)

    el  go to state 19


state 8

   34 code_lit: code_block .

    $default  reduce using rule 34 (code_lit)


state 9

    2 expr: TO_EXP . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 20
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 10

   30 literal: INT_LIT .

    $default  reduce using rule 30 (literal)


state 11

   31 literal: FLOAT_LIT .

    $default  reduce using rule 31 (literal)


state 12

   29 expr: NAME .

    $default  reduce using rule 29 (expr)


state 13

   32 literal: STRING_LIT .

    $default  reduce using rule 32 (literal)


state 14

   26 expr: LPAR . expr RPAR
   27     | LPAR . RPAR

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    RPAR        shift, and go to state 21
    LBRA        shift, and go to state 6

    expr        go to state 22
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 15

    3 expr: expr . ASSIGN expr
    4     | expr . CALL expr
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   25     | expr . subscript
   38 lines: expr .

    TO_EXP      shift, and go to state 9
    ASSIGN      shift, and go to state 23
    CALL        shift, and go to state 24
    TUPLE       shift, and go to state 25
    TAG         shift, and go to state 26
    AS          shift, and go to state 27
    ARR         shift, and go to state 28
    LOR         shift, and go to state 29
    LAND        shift, and go to state 30
    CAT         shift, and go to state 31
    UNEQ        shift, and go to state 32
    EQ          shift, and go to state 33
    GTE         shift, and go to state 34
    LTE         shift, and go to state 35
    GT          shift, and go to state 36
    LT          shift, and go to state 37
    SUB         shift, and go to state 38
    ADD         shift, and go to state 39
    DIV         shift, and go to state 40
    MUL         shift, and go to state 41
    POW         shift, and go to state 42
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43

    $default  reduce using rule 38 (lines)

    expr        go to state 44
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    subscript   go to state 45


state 16

   28 expr: literal .

    $default  reduce using rule 28 (expr)


state 17

   33 literal: code_lit .

    $default  reduce using rule 33 (literal)


state 18

   35 code_block: LBRA lines . RBRA
   36           | LBRA lines . al RBRA
   39 lines: lines . al expr

    NL    shift, and go to state 46
    RBRA  shift, and go to state 47

    al  go to state 48


state 19

    1 program: el code_lit el .
   45 el: el . NL

    NL  shift, and go to state 5

    $default  reduce using rule 1 (program)


state 20

    2 expr: TO_EXP expr .
    3     | expr . ASSIGN expr
    4     | expr . CALL expr
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   25     | expr . subscript

    ASSIGN      shift, and go to state 23
    CALL        shift, and go to state 24
    TUPLE       shift, and go to state 25
    TAG         shift, and go to state 26
    AS          shift, and go to state 27
    ARR         shift, and go to state 28
    LOR         shift, and go to state 29
    LAND        shift, and go to state 30
    CAT         shift, and go to state 31
    UNEQ        shift, and go to state 32
    EQ          shift, and go to state 33
    GTE         shift, and go to state 34
    LTE         shift, and go to state 35
    GT          shift, and go to state 36
    LT          shift, and go to state 37
    SUB         shift, and go to state 38
    ADD         shift, and go to state 39
    DIV         shift, and go to state 40
    MUL         shift, and go to state 41
    POW         shift, and go to state 42
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43

    INT_LIT     [reduce using rule 2 (expr)]
    FLOAT_LIT   [reduce using rule 2 (expr)]
    NAME        [reduce using rule 2 (expr)]
    STRING_LIT  [reduce using rule 2 (expr)]
    LPAR        [reduce using rule 2 (expr)]
    LBRA        [reduce using rule 2 (expr)]
    LSBR        [reduce using rule 2 (expr)]
    $default    reduce using rule 2 (expr)

    expr        go to state 44
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    subscript   go to state 45


state 21

   27 expr: LPAR RPAR .

    $default  reduce using rule 27 (expr)


state 22

    3 expr: expr . ASSIGN expr
    4     | expr . CALL expr
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   25     | expr . subscript
   26     | LPAR expr . RPAR

    TO_EXP      shift, and go to state 9
    ASSIGN      shift, and go to state 23
    CALL        shift, and go to state 24
    TUPLE       shift, and go to state 25
    TAG         shift, and go to state 26
    AS          shift, and go to state 27
    ARR         shift, and go to state 28
    LOR         shift, and go to state 29
    LAND        shift, and go to state 30
    CAT         shift, and go to state 31
    UNEQ        shift, and go to state 32
    EQ          shift, and go to state 33
    GTE         shift, and go to state 34
    LTE         shift, and go to state 35
    GT          shift, and go to state 36
    LT          shift, and go to state 37
    SUB         shift, and go to state 38
    ADD         shift, and go to state 39
    DIV         shift, and go to state 40
    MUL         shift, and go to state 41
    POW         shift, and go to state 42
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    RPAR        shift, and go to state 49
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43

    expr        go to state 44
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    subscript   go to state 45


state 23

    3 expr: expr ASSIGN . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 50
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 24

    4 expr: expr CALL . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 51
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 25

    5 expr: expr TUPLE . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 52
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 26

    6 expr: expr TAG . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 53
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 27

    7 expr: expr AS . expr
    8     | expr AS .

    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    INT_LIT     [reduce using rule 8 (expr)]
    FLOAT_LIT   [reduce using rule 8 (expr)]
    NAME        [reduce using rule 8 (expr)]
    STRING_LIT  [reduce using rule 8 (expr)]
    LPAR        [reduce using rule 8 (expr)]
    LBRA        [reduce using rule 8 (expr)]
    $default    reduce using rule 8 (expr)

    expr        go to state 54
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 28

    9 expr: expr ARR . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 55
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 29

   10 expr: expr LOR . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 56
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 30

   11 expr: expr LAND . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 57
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 31

   18 expr: expr CAT . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 58
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 32

   12 expr: expr UNEQ . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 59
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 33

   13 expr: expr EQ . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 60
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 34

   14 expr: expr GTE . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 61
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 35

   15 expr: expr LTE . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 62
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 36

   16 expr: expr GT . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 63
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 37

   17 expr: expr LT . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 64
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 38

   19 expr: expr SUB . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 65
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 39

   20 expr: expr ADD . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 66
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 40

   21 expr: expr DIV . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 67
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 41

   22 expr: expr MUL . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 68
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 42

   23 expr: expr POW . expr

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 69
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 43

   40 subscript: LSBR . expr RSBR

    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6

    expr        go to state 70
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 44

    3 expr: expr . ASSIGN expr
    4     | expr . CALL expr
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   24     | expr expr .
   25     | expr . subscript

    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43

    INT_LIT     [reduce using rule 24 (expr)]
    FLOAT_LIT   [reduce using rule 24 (expr)]
    NAME        [reduce using rule 24 (expr)]
    STRING_LIT  [reduce using rule 24 (expr)]
    LPAR        [reduce using rule 24 (expr)]
    LBRA        [reduce using rule 24 (expr)]
    LSBR        [reduce using rule 24 (expr)]
    $default    reduce using rule 24 (expr)

    expr        go to state 44
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    subscript   go to state 45


state 45

   25 expr: expr subscript .

    $default  reduce using rule 25 (expr)


state 46

   41 al: NL .

    $default  reduce using rule 41 (al)


state 47

   35 code_block: LBRA lines RBRA .

    $default  reduce using rule 35 (code_block)


state 48

   36 code_block: LBRA lines al . RBRA
   39 lines: lines al . expr
   42 al: al . NL

    NL          shift, and go to state 71
    TO_EXP      shift, and go to state 9
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    RBRA        shift, and go to state 72

    expr        go to state 73
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8


state 49

   26 expr: LPAR expr RPAR .

    $default  reduce using rule 26 (expr)


state 50

    3 expr: expr . ASSIGN expr
    3     | expr ASSIGN expr .
    4     | expr . CALL expr
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   25     | expr . subscript

    ASSIGN      shift, and go to state 23
    CALL        shift, and go to state 24
    TUPLE       shift, and go to state 25
    TAG         shift, and go to state 26
    AS          shift, and go to state 27
    ARR         shift, and go to state 28
    LOR         shift, and go to state 29
    LAND        shift, and go to state 30
    CAT         shift, and go to state 31
    UNEQ        shift, and go to state 32
    EQ          shift, and go to state 33
    GTE         shift, and go to state 34
    LTE         shift, and go to state 35
    GT          shift, and go to state 36
    LT          shift, and go to state 37
    SUB         shift, and go to state 38
    ADD         shift, and go to state 39
    DIV         shift, and go to state 40
    MUL         shift, and go to state 41
    POW         shift, and go to state 42
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43

    INT_LIT     [reduce using rule 3 (expr)]
    FLOAT_LIT   [reduce using rule 3 (expr)]
    NAME        [reduce using rule 3 (expr)]
    STRING_LIT  [reduce using rule 3 (expr)]
    LPAR        [reduce using rule 3 (expr)]
    LBRA        [reduce using rule 3 (expr)]
    LSBR        [reduce using rule 3 (expr)]
    $default    reduce using rule 3 (expr)

    expr        go to state 44
    literal     go to state 16
    code_lit    go to state 17
    code_block  go to state 8
    subscript   go to state 45


state 51

    3 expr: expr . ASSIGN expr
    4     | expr . CALL expr
    4     | expr CALL expr .
    5     | expr . TUPLE expr
    6     | expr . TAG expr
    7     | expr . AS expr
    8     | expr . AS
    9     | expr . ARR expr
   10     | expr . LOR expr
   11     | expr . LAND expr
   12     | expr . UNEQ expr
   13     | expr . EQ expr
   14     | expr . GTE expr
   15     | expr . LTE expr
   16     | expr . GT expr
   17     | expr . LT expr
   18     | expr . CAT expr
   19     | expr . SUB expr
   20     | expr . ADD expr
   21     | expr . DIV expr
   22     | expr . MUL expr
   23     | expr . POW expr
   24     | expr . expr
   25     | expr . subscript

    TUPLE       shift, and go to state 25
    TAG         shift, and go to state 26
    AS          shift, and go to state 27
    ARR         shift, and go to state 28
    LOR         shift, and go to state 29
    LAND        shift, and go to state 30
    CAT         shift, and go to state 31
    UNEQ        shift, and go to state 32
    EQ          shift, and go to state 33
    GTE         shift, and go to state 34
    LTE         shift, and go to state 35
    GT          shift, and go to state 36
    LT          shift, and go to state 37
    SUB         shift, and go to state 38
    ADD         shift, and go to state 39
    DIV         shift, and go to state 40
    MUL         shift, and go to state 41
    POW         shift, and go to state 42
    INT_LIT     shift, and go to state 10
    FLOAT_LIT   shift, and go to state 11
    NAME        shift, and go to state 12
    STRING_LIT  shift, and go to state 13
    LPAR        shift, and go to state 14
    LBRA        shift, and go to state 6
    LSBR        shift, and go to state 43
